--- a/src/components/Container/index.scss
+++ b/src/components/Container/index.scss
@@ -3,3 +3,10 @@
   padding-inline: 3rem;
   margin-inline: auto;
 }
+
+@media (max-width: 1199px){
+  .main-container {
+    padding-inline: 1rem;
+    margin: 0;
+  }
+}
